# dipper

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  cliff.toml  deny.toml  flake.nix  justfile  release.toml
.github/workflows/: cla.yml  unit.yml
proto/: chunk.proto  node.proto
src/: chain.rs  chunkops.rs  cli.rs  download.rs  main.rs  manifest.rs  proto.rs  retry.rs  rpc.rs  store.rs  streaming.rs  usage.rs  wallet.rs
src/commands/: chunk.rs  mod.rs  node.rs  peer.rs  wallet.rs
