[package]
name = "dipper"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Nexum Contributors"]
description = "A cast-like CLI for Ethereum Swarm, talking to a vertex node over gRPC"
license = "AGPL-3.0-or-later"
repository = "https://github.com/nxm-rs/dipper"
homepage = "https://github.com/nxm-rs/dipper"

# Single-crate repo: the root package is its own workspace so it can carry the
# shared lint posture used across the nxm-rs repos.
[workspace]

[workspace.lints.rust]
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[lints]
workspace = true

[[bin]]
name = "dipper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tonic = "0.12"
prost = "0.13"
anyhow = "1"
thiserror = "2"
hex = "0.4"
rpassword = "7"
# Terminal progress bar for file downloads (bytes done/total, rate, ETA).
indicatif = "0.17"

# nectar crates pinned to a git rev carrying the shared `RetryingChunkGet`
# decorator (the async-only chunk-store API plus the injected `Sleeper`). All
# nectar deps share one rev so their `nectar-primitives` types unify. The
# `local-signer` feature pulls in the `BatchStamper`/`MemoryIssuer` signing
# path used for upload.
nectar-primitives = { git = "https://github.com/nxm-rs/nectar", rev = "304b548284f2f4d8b122ff98fea087743665948d" }
nectar-postage = { git = "https://github.com/nxm-rs/nectar", rev = "304b548284f2f4d8b122ff98fea087743665948d" }
nectar-postage-issuer = { git = "https://github.com/nxm-rs/nectar", rev = "304b548284f2f4d8b122ff98fea087743665948d", features = ["local-signer"] }
# Mantaray manifest (phase 3): plain (non-encrypted) manifests over a chunk
# store; default features only (no `encryption`).
nectar-mantaray = { git = "https://github.com/nxm-rs/nectar", rev = "304b548284f2f4d8b122ff98fea087743665948d" }
# Contract address book + reusable IERC20 interface (phase 2). Its
# IPostageStamp is read-only, so dipper declares its own write interface.
nectar-contracts = { git = "https://github.com/nxm-rs/nectar", rev = "304b548284f2f4d8b122ff98fea087743665948d" }

# alloy - versions pinned to match nectar's workspace so Signature/Address/B256
# types unify across nectar's public API. The "keystore" feature on
# alloy-signer-local enables PrivateKeySigner::decrypt_keystore for cast /
# EIP-2335 JSON keystores.
alloy-primitives = "1.6"
alloy-signer = "2.0"
alloy-signer-local = { version = "2.0", features = ["keystore"] }

# alloy chain stack (phase 2 on-chain batch ops). Default features on
# alloy-provider pull in the reqwest HTTP transport (connect/connect_http).
alloy-provider = "2.0"
alloy-contract = "2.0"
alloy-network = "2.0"
alloy-rpc-types-eth = "2.0"
alloy-sol-types = "1.6"

# File-input handling for the mantaray upload pipeline (phase 3).
walkdir = "2"
tar = "0.4"
flate2 = "1"
mime_guess = "2"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
lto = "thin"
